2006-01-11  Ricci Adams  <ricciadams@apple.com>

        Reviewed by Geoff, landed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5308
          Number.toFixed doesn't include leading 0

        * kjs/number_object.cpp: (NumberProtoFunc::callAsFunction):
        Fixed a "<" that should have been a "<=".

2006-01-11  Ricci Adams  <ricciadams@apple.com>

        Reviewed by Geoff, landed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5307
          Number.toFixed doesn't round 0.5 up

        * kjs/number_object.cpp: (NumberProtoFunc::callAsFunction):
        Fixed a ">" that should have been a ">=".

2006-01-11  Justin Haygood  <justin@xiondigital.net>

        Reviewed and landed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6486
          JavaScriptCore should use system malloc on Windows

        * kjs/config.h: Add USE_SYSTEM_MALLOC to the Win32 section.

2006-01-10  Darin Adler  <darin@apple.com>

        * Makefile: Took out unneeded "export" line.
        * <many-files>: Changed a lot of flags (cleared bogus executable bits, set
          MIME types, other small corrections).

2006-01-09  Darin Adler  <darin@apple.com>

        * Makefile.am: Removed.

2006-01-07  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.
        
        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6373
        REGRESSION: JavaScript hang when comparing large array to null
        
        * kjs/object.h:
        (KJS::JSObject::isEqualToNull):
        Add new function which returns true if an object should be treated as null when
        doing comparisons.
        
        * kjs/operations.cpp:
        (KJS::equal):
        Use isEqualToNull.

2006-01-07  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Maciej.

        - Fix WebCore development build
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6408
